// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSelect should render correctly 1`] = `
<select
  aria-invalid={false}
  className="bpk-select"
  disabled={false}
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="oranges"
>
  <option
    value="apples"
  >
    Apples
  </option>
  <option
    value="oranges"
  >
    Oranges
  </option>
  <option
    value="pears"
  >
    Pears
  </option>
  <option
    disabled={true}
    value="tomatoes"
  >
    Tomatoes
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "className" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select test"
  disabled={false}
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="oranges"
>
  <option
    value="apples"
  >
    Apples
  </option>
  <option
    value="oranges"
  >
    Oranges
  </option>
  <option
    value="pears"
  >
    Pears
  </option>
  <option
    disabled={true}
    value="tomatoes"
  >
    Tomatoes
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "docked" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--docked"
  disabled={false}
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value=""
>
  <option
    value="apples"
  >
    Apples
  </option>
  <option
    value="oranges"
  >
    Oranges
  </option>
  <option
    value="pears"
  >
    Pears
  </option>
  <option
    disabled={true}
    value="tomatoes"
  >
    Tomatoes
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "dockedFirst" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--docked-first"
  disabled={false}
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value=""
>
  <option
    value="apples"
  >
    Apples
  </option>
  <option
    value="oranges"
  >
    Oranges
  </option>
  <option
    value="pears"
  >
    Pears
  </option>
  <option
    disabled={true}
    value="tomatoes"
  >
    tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "dockedLast" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--docked-last"
  disabled={false}
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value=""
>
  <option
    value="apples"
  >
    Apples
  </option>
  <option
    value="oranges"
  >
    Oranges
  </option>
  <option
    value="pears"
  >
    Pears
  </option>
  <option
    disabled={true}
    value="tomatoes"
  >
    Tomatoes
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "dockedMiddle" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--docked-middle"
  disabled={false}
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value=""
>
  <option
    value="apples"
  >
    Apples
  </option>
  <option
    value="oranges"
  >
    Oranges
  </option>
  <option
    value="pears"
  >
    Pears
  </option>
  <option
    disabled={true}
    value="tomatoes"
  >
    Tomatoes
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "large" attribute 1`] = `
<select
  aria-invalid={false}
  className="bpk-select bpk-select--large"
  disabled={false}
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value=""
>
  <option
    value="apples"
  >
    Apples
  </option>
  <option
    value="oranges"
  >
    Oranges
  </option>
  <option
    value="pears"
  >
    Pears
  </option>
  <option
    disabled={true}
    value="tomatoes"
  >
    Tomatoes
  </option>
</select>
`;

exports[`BpkSelect should render correctly with a "valid" attribute equal to false 1`] = `
<select
  aria-invalid={true}
  className="bpk-select"
  disabled={false}
  id="fruits"
  name="fruits"
  onChange={[Function]}
  value="oranges"
>
  <option
    value="apples"
  >
    Apples
  </option>
  <option
    value="oranges"
  >
    Oranges
  </option>
  <option
    value="pears"
  >
    Pears
  </option>
  <option
    disabled={true}
    value="tomatoes"
  >
    Tomatoes
  </option>
</select>
`;

exports[`BpkSelect should render correctly with image 1`] = `
<div
  className="bpk-select-wrapper"
>
  <img
    alt="placeholder"
    className="bpk-select-wrapper__image"
    src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 200 150'%2F%3E"
  />
  <select
    aria-invalid={false}
    className="bpk-select bpk-select--with-image"
    disabled={false}
    id="fruits"
    name="fruits"
    onChange={[Function]}
    value="oranges"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled={true}
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</div>
`;

exports[`BpkSelect should render correctly with image and "disabled" property 1`] = `
<div
  className="bpk-select-wrapper wrapperClass--test"
>
  <img
    alt="placeholder"
    className="bpk-select-wrapper__image bpk-select-wrapper__image--disabled imageWrapperClass--test"
    src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 200 150'%2F%3E"
  />
  <select
    aria-invalid={false}
    className="bpk-select bpk-select--with-image"
    disabled={true}
    id="fruits"
    name="fruits"
    onChange={[Function]}
    value="oranges"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled={true}
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</div>
`;

exports[`BpkSelect should render correctly with image and custom classes 1`] = `
<div
  className="bpk-select-wrapper wrapperClass--test"
>
  <img
    alt="placeholder"
    className="bpk-select-wrapper__image imageWrapperClass--test"
    src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 200 150'%2F%3E"
  />
  <select
    aria-invalid={false}
    className="bpk-select bpk-select--with-image"
    disabled={false}
    id="fruits"
    name="fruits"
    onChange={[Function]}
    value="oranges"
  >
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled={true}
      value="tomatoes"
    >
      Tomatoes
    </option>
  </select>
</div>
`;
